# zunda

./: .gitattributes  COPYING  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
cdbpp-1.0/: Makefile.in
cdbpp-1.1/: Makefile.am.orig  Makefile.in  Makefile.in.orig  autogen.sh  config.h.in  configure
cdbpp-1.1/include/: Makefile.am  Makefile.in  cdbpp.h
dic/: FAdic  FAdic.cdb  FAdic.cdb.dump  Makefile.am  Makefile.in  keyterms.txt  ttjcore2seq  ttjcore2seq.cdb  ttjcore2seq.cdb.dump
docs/: index.md
liblinear-1.8/: Makefile.am  Makefile.in  README  linear.cpp
liblinear-1.8/blas/: Makefile.am  Makefile.in
model/: Makefile.am  Makefile.in
model_ipa/: Makefile.am  Makefile.in  feat2id.cdb  feat2id.cdb.dump  funcsem_v2.2.2.crfpp.model  id2label.cdb  id2label.cdb.dump  label2id.cdb  label2id.cdb.dump  model_assumptional  model_sentiment  model_tense
model_juman/: Makefile.am  Makefile.in  feat2id.cdb  feat2id.cdb.dump  id2label.cdb.dump  label2id.cdb.dump  model_assumptional  model_sentiment  model_tense
src/: Makefile.am  Makefile.in  cdbmap.hpp  eval.hpp  feature.cpp  funcsem-train.cpp  funcsem.cpp  funcsem.hpp  main.cpp  make_cdb_fadic.cpp  make_cdb_ttj.cpp  make_kc_fadic.cpp  make_kc_ttj.cpp  modality-eval.cpp  modality-learn.cpp  modality.cpp  modality.hpp  oc2cab.cpp  sentence.cpp  sentence.hpp  util.cpp  util.hpp  xml2cab.cpp
test/: 46473100807778304_0_sent.deppas  OC01_00001m.xml
tinyxml2/: Makefile.am  Makefile.in
